# pufferblow

./: .actrc  .all-contributorsrc  .buildinfo  .env.server.example  .flake8  .gitignore  .pre-commit-config.yaml  .pufferblow-admin-account-auth-token  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_PRODUCTION.md  Dockerfile  PUFFERBLOW_MVP.md  README.md  SECURITY.md  TODO.md  V1_0_CAVEATS.md  WIKI.md  api.html  api_reference.html  decentralization.html  docker-compose.prod.server.yml  genindex.html  get_started.html  index.html  introduction.html  mkdocs.yml  modules.html  objects.inv  pufferblow.api_initializer.html  pufferblow.cli.cli.html  pufferblow.cli.commands.html  pufferblow.cli.commands.serve.html  pufferblow.cli.commands.storage.html  pufferblow.cli.common.html  pufferblow.cli.html  pufferblow.constants.html  pufferblow.core.bootstrap.html  pufferblow.core.constants.html  pufferblow.core.html  (+11 more)
.github/workflows/: docs.yml  gh-pages.yaml  lint.yaml  sphinx-doc.yaml  tests.yaml
_sources/: api.rst  api_reference.rst  decentralization.rst  get_started.rst  index.rst  modules.rst  pufferblow.api_initializer.rst  pufferblow.cli.cli.rst  pufferblow.cli.commands.rst  pufferblow.cli.commands.serve.rst  pufferblow.cli.commands.storage.rst  pufferblow.cli.common.rst  pufferblow.cli.rst  pufferblow.constants.rst  pufferblow.core.bootstrap.rst  pufferblow.core.constants.rst  pufferblow.core.middlewares.rst  pufferblow.core.rst  pufferblow.middlewares.rst  pufferblow.rst  pufferblow.server.app.rst  pufferblow.server.middlewares.rst  pufferblow.server.rst  roles.rst
_static/: documentation_options.js
devtools/cond-envs/: docs_env.yaml
docs/: api.rst  api_reference.rst  conf.py  decentralization.rst  donate.rst  get_started.rst  index.md  index.rst  introduction.rst  roles.rst  server_wiki.rst
docs/_static/css/: styles.css
docs/developer/: api-reference.md  index.md
pufferblow/: __init__.py  api.py  api_initializer.py  cli.py  constants.py  middlewares.py
pufferblow/api/: api.py  dependencies.py  schemas.py
pufferblow/api/activitypub/: __init__.py  activitypub_manager.py
pufferblow/api/auth/: auth_token_manager.py  decentralized_auth_manager.py
pufferblow/api/background_tasks/: __init__.py  analytics_mixin.py  background_tasks_manager.py  scheduler_mixin.py
pufferblow/api/cdn/: __init__.py  cdn_manager.py
pufferblow/api/channels/: channels_manager.py
pufferblow/api/config/: config.toml.example  config_handler.py  config_sample.toml
pufferblow/api/database/: database.py  database_handler.py  metrics_files_mixin.py  runtime_config_mixin.py
pufferblow/api/encrypt/: encrypt.py
pufferblow/api/hasher/: hasher.py
pufferblow/api/logger/: levels.py  logger.py
pufferblow/api/messages/: messages_manager.py
pufferblow/api/models/: blocked_ip_model.py  channel_model.py  config_model.py  keys_model.py  message_model.py  message_read_history_model.py  user_model.py
pufferblow/api/notifications/: __init__.py  notifications_manager.py
pufferblow/api/ping/: __init__.py  ping_manager.py
pufferblow/api/roles/: __init__.py  constants.py
pufferblow/api/routes/: __init__.py  activitypub.py  admin.py  auth.py  channels.py  core.py  internal_voice.py  messages.py  moderation.py  notifications.py  ping.py  register.py  storage.py  system.py  users.py  users_example.py  voice_v2.py  websocket.py
pufferblow/api/security/: security_checks_handler.py  sql_injection_detector.py
pufferblow/api/server/: server_manager.py
pufferblow/api/storage/: local_storage.py  path_utils.py  s3_storage.py  storage_backend.py  storage_manager.py
pufferblow/api/user/: status.py  user_manager.py
pufferblow/api/utils/: appearance.py  current_date.py  db_retry.py  extract_user_id.py  http_datetime.py  is_able_to_update.py  prompt.py
pufferblow/api/voice/: __init__.py  voice_session_manager.py
pufferblow/api/webrtc/: webrtc_manager.py
pufferblow/api/websocket/: websocket_manager.py
pufferblow/cli/: __init__.py  cli.py  common.py  control_panel.py  setup_prompt.py  textual_setup.py
pufferblow/cli/commands/: __init__.py  serve.py  setup.py  storage.py
pufferblow/core/: __init__.py  bootstrap.py  constants.py  middlewares.py
pufferblow/server/: __init__.py  app.py  middlewares.py
pufferblow/src/auth/: auth_token_manager.py
pufferblow/src/channels/: channels_manager.py
pufferblow/src/config/: config_handler.py  config_sample.toml
pufferblow/src/database/: database.py  database_handler.py
pufferblow/src/hasher/: hasher.py
pufferblow/src/logger/: levels.py  logger.py
pufferblow/src/messages/: messages_manager.py
pufferblow/src/models/: blocked_ip_model.py  channel_model.py  config_model.py  (+7 more)
pufferblow/tests/: conftest.py  test_01_signup.py  test_02_signin.py  test_02_user_profile.py  test_03_edit_users_profile.py  test_04_reset_users_auth_token.py  test_04_user_profile.py  test_05_list_server_users.py  test_05_reset_users_auth_token.py  test_06_list_server_channels.py  test_06_list_server_users.py  test_07_list_server_channels.py  test_08_cdn_uploads.py  test_09_websocket_read_messages.py  test_15_roles.py  test_16_privilege_routes.py  test_17_moderation_routes.py  test_18_message_read_history.py  test_19_instance_message_policy.py  test_20_voice_media_quality.py  test_21_instance_health.py  test_22_background_analytics.py  test_23_sql_injection_detection.py  test_24_channel_search.py  test_25_mention_notifications.py  test_25_message_reactions.py  test_26_activitypub_reliability.py  test_27_http_datetime.py  test_cdn_manager.py  test_config_handler_cors.py  test_storage_path_utils.py
pufferblow_api/: __main__.py  api.py  api_initializer.py  cli.py  constants.py  pufferblow_api.py
pufferblow_api/tests/: config-for-tests.yaml  conftest.py  test_01_signup.py  test_02_user_profile.py  test_03_edit_users_profile.py  test_04_reset_users_auth_token.py  test_05_list_server_users.py  test_06_list_server_channels.py  test_user_signup.py
scripts/: benchmark_cli_startup.py  build_docs.py  docs.py  export_openapi.py  migrate_storage.py  run_tests.sh  test_storage.py
(+94 files in other folders)
