[tool.poetry]
name = "pufferblow"
version = "0.0.1-beta"
description = "The official API for PufferBlow"
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "pufferblow"},
    {include = "docs"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
typer = "^0.15.3"
rich = "^14.0.0"
uvicorn = "^0.34.2"
pycryptodome = "^3.22.0"
loguru = "^0.7.3"
pytz = "^2025.2"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.5"
sqlalchemy = "^2.0.41"
websockets = "^15.0"
httpx = "^0.28.1"
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.2"
sphinx-autobuild = "^2024.10.3"
sphinx-favicon = "^1.0.1"
myst-parser = "^4.0.0"
sqlalchemy-utils = "^0.41.2"
orjson = "^3.10.18"
basedpyright = "^1.29.2"
pymemcache = "^4.0.0"
cryptography = "^44.0.3"
textual = "^3.2.0"
textual-dev = "^1.7.0"
bcrypt = "^4.3.0"

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.3"
gunicorn = "^23.0.0"

[tool.poetry.plugins."console_scripts"]
pufferblow = "pufferblow:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyprojectx]
main = ["pdm==2.12.4"]  # installs pdm to your project instead of globally

[tool.pdm.dev-dependencies]  # or the poetry equivalent
dev = [
    "basedpyright", # you can pin the version here if you want, or just rely on the lockfile
]

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright includes an "all" option
# you can then decide which rules you want to disable
typeCheckingMode = "standard"
reportMissingSuperCall = false
